--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 Cadets of A-Flight NCC, NIT Trichy. It aims to persuade and motivate the youth of the college to join the Defence Forces and Civil Services 
 through a plethora of offered opportunities. Since its humble inception in 2012 as the Social Responsibility Event of Pragyan/ Festember, 
 Lakshya has grown leaps and bounds every year. With its every edition transcending the previous one, Lakshya continues to grow bigger and better.
- Lakshya offers a wide range of events, workshops and informals accompanied by guest lectures delivered by the veterans of their respective fields. 
+ Lakshya offers a wide range of events, workshops, informals accompanied by guest lectures delivered by the veterans of their respective fields. 
 The testament to Lakshya's success lies in the observation that a hot summer weekend in Central 
 Tamil Nadu finds students enthusiastically participating in events and grabbing the chance to grow as a person to discover The Spirit of Being Indian.</p>
           </div>
