--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ Tamil Nadu finds students enthusiastically participating in events and grabbing 
                 
                 <hr>
                 <div class="text-center">
-                 <a href="https://forms.gle/VXaA5b7jj4eK1yyg7" target="_blank" <button type="button" class="btn">Register</button></a>
+                 <a href="#" target="_blank" <button type="button" class="btn">Event Ended</button></a>
                 </div>
               </div>
             </div>
