--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ Tamil Nadu finds students enthusiastically participating in events and grabbing 
                 
                 <hr>
                 <div class="text-center">
-                 <a href="#" <button type="button" disabled class="btn">Event Ended</button></a>
+                 <a href="" <button type="button" disabled class="btn">Event Ended</button></a>
                 </div>
               </div>
             </div>
