--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@ Tamil Nadu finds students enthusiastically participating in events and grabbing 
                 </ul>-->
                 <hr>
                 <div class="text-center">
-                <a href=""<button type="button" class="btn">Registrations Over</button></a>
+                <a href=""<button type="button" class="btn">Event Started</button></a>
                 </div>
               </div>
             </div>
