--- a/index.html
+++ b/index.html
@@ -1057,9 +1057,9 @@ Tamil Nadu finds students enthusiastically participating in events and grabbing 
         <a href="https://www.youtube.com/channel/UCn2fyA27G9uqY6v1t7TaAYA" target="_blank" class="youtube">
             <i class="bi bi-youtube"></i></a>
       </div>
-      <div class="copyright">
+      <!--<div class="copyright">
         &copy; Copyright <strong><span>Lakshya</span></strong>. All Rights Reserved
-      </div>
+      </div>-->
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
