--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ Tamil Nadu finds students enthusiastically participating in events and grabbing 
                 </ul>-->
                 <hr>
                 <div class="text-center">
-                <a href=""<button type="button" class="btn">Event Started</button></a>
+                <a href=""<button type="button" class="btn">Event Ended</button></a>
                 </div>
               </div>
             </div>
