--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><br><span>Lakshya </span> '21</h1>
-      <p class="mb-4 pb-0">28-30 May, 2021</p>
+      <p class="mb-4 pb-0"></p>
       <a href="https://youtu.be/Brtpl3PXh3E" class="glightbox play-btn mb-4"></a>
       <a href="#about" class="about-btn scrollto">About Us</a>
     </div>
